<?xml version="1.0"?>
<package format="2">
  <name>cirkit_unit03_control</name>
  <version>0.1.0</version>
  <description>The cirkit_unit03_control package</description>

  <maintainer email="k104009y@mail.kyutech.jp">Arita Yuta</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>ira_laser_tools</exec_depend>
  <exec_depend>laser_filters</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
