<?xml version="1.0"?>
<package format="2">
  <name>cirkit_unit03_control</name>
  <version>0.1.0</version>
  <description>The cirkit_unit03_control package</description>

  <maintainer email="k104009y@mail.kyutech.jp">Arita Yuta</maintainer>
  <maintainer email="p595201m@mail.kyutech.jp">Masaru Morita</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/CIR-KIT-Unit03/cirkit_unit03_common.git</url>
  <url type="bugtracker">https://github.com/CIR-KIT-Unit03/cirkit_unit03_common/issues</url>
  <author email="cirkit.infomation@gmail.com">CIR-KIT</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ira_laser_tools</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>laser_filters</exec_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>steer_drive_controller</exec_depend>

  <export>
  </export>
</package>
