<?xml version="1.0"?>
<package format="2">
  <name>cirkit_unit03_description</name>
  <version>0.1.0</version>
  <description>The cirkit_unit03_description package</description>

  <maintainer email="k104009y@mail.kyutech.jp">Arita Yuta</maintainer>
  <maintainer email="p595201m@mail.kyutech.jp">Masaru Morita</maintainer>
  <license>MIT</license>
  <url type="reposigory">https://github.com/CIR-KIT-Unit03/cirkit_unit03/tree/master/cirkit_unit03_description</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>cirkit_unit03_description</exec_depend>
  <exec_depend>cirkit_unit03_2dnav</exec_depend>

  <export>
  </export>
</package>
