<?xml version="1.0"?>
<package format="2">
  <name>cirkit_unit03_description</name>
  <version>0.1.0</version>
  <description>The cirkit_unit03_description package</description>

  <maintainer email="k104009y@mail.kyutech.jp">Arita Yuta</maintainer>
  <maintainer email="p595201m@mail.kyutech.jp">Masaru Morita</maintainer>
  <maintainer email="o111027y@mail.kyutech.jp">Doi Yusuke</maintainer>
  <license>BSD</license>

  <url type="reposigory">https://github.com/CIR-KIT-Unit03/cirkit_unit03.git</url>
  <url type="bugtracker">https://github.com/CIR-KIT-Unit03/cirkit_unit03/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <exec_depend>cirkit_unit03_navigation</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
