<?xml version="1.0"?>
<package format="2">
  <name>cirkit_unit03_navigation</name>
  <version>0.1.0</version>
  <description>The cirkit_unit03_navigation package</description>

  <maintainer email="k104009y@mail.kyutech.jp">Arita Yuta</maintainer>

  <license>BSD</license>
  <url type="repository">https://github.com/CIR-KIT-Unit03/cirkit_unit03_common.git</url>
  <url type="bugtracker">https://github.com/CIR-KIT-Unit03/cirkit_unit03_common/issues</url>
  <author email="cirkit.infomation@gmail.com">CIR-KIT</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
