<?xml version="1.0"?>
<package format="2">
  <name>cirkit_unit03_navigation_gazebo</name>
  <version>0.1.0</version>
  <description>The cirkit_unit03_navigation for gazebo package</description>

  <maintainer email="p595201m@mail.kyutech.jp">Masaru Morita</maintainer>
  <license>BSD</license>

  <url type="reposigory">https://github.com/CIR-KIT-Unit03/cirkit_unit03.git</url>
  <url type="bugtracker">https://github.com/CIR-KIT-Unit03/cirkit_unit03/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>base_local_planner</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>frontier_exploration</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>navfn</exec_depend>

  <export>
  </export>
</package>
